# appstream-generator

./: meson.build  meson_options.txt
src/: config.cpp  config.h  engine.cpp  meson.build
src/asgen/: config.d  engine.d  meson.build
src/asgen/backends/stone/: package.d  stonebindings.d  stonepkg.d  stonepkgindex.d
src/backends/: meson.build
src/backends/aeryn/: aerynpkg.cpp  aerynpkg.h  aerynpkgindex.cpp  aerynpkgindex.h  aerynutils.cpp  aerynutils.h  meson.build
