#
# Options for AppStream Generator
#

option('rpmmd',
       type: 'boolean',
       value: true,
       description: 'Build the RPM-MD backend..'
)
option('stone',
       type: 'boolean',
       value: false,
       description: 'Build the Stone backend for Aeryn OS.'
)
option('download-js',
       type: 'boolean',
       value: true,
       description: 'Download JavaScript with NPM automatically.'
)
option('gir-dir',
       type: 'string',
       value: '',
       description: 'Override the directory where gir-to-d searches for GIR files.'
)
